did a quick pass of findbugs, found a number of easy to fix issues